--- a/docs/GenZD/_config.yml
+++ b/docs/GenZD/_config.yml
@@ -22,7 +22,7 @@ domain: yoshisuga.github.io
 title: GenZD
 description: >- # this means to ignore newlines until "baseurl:"
   An iOS port of GZDoom
-baseurl: "/GenZD" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://yoshisuga.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: y0sh1
 github_username:  yoshisuga
